Ensure children sources are read for multisource fetcher prior to config

The fetch dialog ends up calling Fetch::Manager::canSearch to set the
search types in the window. Ensure that multi-source fetchers read their
children configruation before responding to ::canSearch

BUG: 461861
FIXED-IN: 3.4.6